<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OSU TBI-ID</string>
    <string name="action_settings">Settings</string>
    <string name="new_interview">New Interview</string>
    <string name="title_activity_step1">Step1Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="step_1_help">Ask questions 1 through 5. Record the cause of each reported injury and any details provided spontaneously. You do not need to ask further about loss of consciousness or other injury details during this step.</string>
    <string name="step_2_help">Interviewer instruction: If the answer is "yes" to any of the questions in Step 1 ask additional questions about each reported injury.\n\nWere you knocked out or did you lose consciousness (LOC)?</string>
    <string name="step_3_help">Interviewer instruction: Ask the additional questions  to help identify a history that may include multiple mild TBIs.\n\nHave you ever had a period of time in which you experienced multiple, repeated impacts to your head (e.g. history of abuse, contact sports, military duty)?</string>
    <string name="step_1_question1">1. In your lifetime, have you ever been hospitalized or treated in an emergency room following an injury to your head or neck? Think about any childhood injuries you remember or were told about.</string>
    <string name="step_1_question2">2. In your lifetime, have you ever injured your head or neck in a car accident or from crashing some other moving vehicle like a bicycle, motorcycle, or ATV?</string>
    <string name="step_1_question3">3. In your lifetime, have you ever injured your head or neck in a fall or from being hit by something (for example, falling from a bike or horse, rollerblading, falling on ice, being hit by a rock)? Have you ever injured your head or neck playing sports or on the playground?</string>
    <string name="step_1_question4">4. In your lifetime, have you ever injured your head or neck in a fight, from being hit by someone, or from being shaken violently? Have you ever been shot in the head?</string>
    <string name="step_1_question5">5. In your lifetime, have you ever been nearby when an explosion or blast has occurred? If you served in the military, think about any combat- or training-related incidents.\n\n</string>
    <string name="title_activity_step1_cause">Step1Cause</string>
    <string name="osu_tbi_id">OSU TBI-ID</string>
    <string name="or">OR</string>
    <string name="hipaaComplianceCheckbox">Are you free from HIPAA restrictrions?</string>
    <string name="settingsTitle">Settings</string>
    <string name="enterEmailHipaa">Please Enter Your Email Below:</string>
    <string name="emailHint">Email</string>
    <string name="emailInputType">textEmailAddress</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="osutbi_dev_excerpt">The OSU TBI-ID was developed by John D. Corrigan, PhD, and Jennifer A. Bogner, PhD, from the Department of Physical Medicine &amp; Rehabilitation at The Ohio State University Wexner Medical Center.\n\nFree online training on administration of the OSU TBI-ID is available at:</string>
    <string name="osutbi_property_disclaim">The OSU TBI-ID and related materials are the property of the Ohio Valley Center for Brain Injury Prevention and Rehabilitation in the Department of Physical Medicine and Rehabilitation at The Ohio State University Wexner Medical Center and are copyright protected (© 2007 Ohio Valley Center for Brain Injury Prevention and Rehabilitation).</string>
    <string name="osutbi_permissions">The OSU TBI-ID may be used free of charge. No changes may be made to the OSU TBI-ID without the written permissions of the authors, Drs. Corrigan and Bogner.</string>
    <string name="osutbi_grant_funding">Development of the OSU TBI-ID was made possible by grant funding from the US Department of Health and Human Services (HHS), Centers for Disease Control and Prevention (CDC), and the US Department of Education, Office of Special Education and Rehabilitative Services, National Institute on Disability and Rehabilitation Research.\n</string>
    <string name="title_activity_step2">Step2Activity</string>
    <string name="about_title">About</string>
    <string name="title_activity_step1_review">Step1Review</string>
    <string name="title_activity_send">Send Activity</string>
    <string name="interviewName">Interviewer Name</string>
    <string name="howOld">How old were you?</string>
    <string name="LOC">Were you knocked out or did you lose consciousness (LOC)?</string>
    <string name="title_activity_step2_yes">Step2Yes</string>
    <string name="title_activity_step2_no">Step2No</string>
    <string name="howLong">How long?</string>
    <string name="less30">&lt; 30 minutes</string>
    <string name="to24">30 min - 24 hours</string>
    <string name="more24">&gt; 24 hours</string>
    <string name="dazed">Were you dazed or did you have a gap in your memory from the injury?</string>
    <string name="title_activity_step2_review">Step2Review</string>
    <string name="title_activity_step3">Step3Activity</string>
    <string name="step3_question_1">Have you ever had a period of time in which you experienced multiple, repeated impacts to your head (e.g. history of abuse, contact sports, military duty)?</string>
    <string name="title_activity_step3_yes">Step3Yes</string>
    <string name="title_activity_step1_cause2">Step1Cause2</string>
    <string name="title_activity_add_another">AddAnother</string>
    <string name="title_activity_step3_add_cause">Step3AddCause</string>
    <string name="title_activity_step3_effect">Step3Effect</string>
    <string name="step_3_instruction">What was the most severe effect from one of the times you had an impact?</string>
    <string name="title_activity_step3_review">Step3Review</string>
    <string name="title_activity_final_review">FinalReview</string>
    <string name="final_review_title">Final Review</string>
    <string name="step_2_help_part_2">If yes, how long?\n\nIf no, were you dazed or did you have a gap in your memory from the injury?</string>
    <string name="step_2_help_part_3">How old were you?</string>
    <string name="step_3_help_part_2">If yes, what was the typical or usual effect -- were you knocked out (Loss of Consciousness - LOC)?\n\nIf no, were you dazed or did you have a gap in your memory from the injury?</string>
    <string name="step_3_help_part_3">What was the most severe effect from one of the times you had an impact to the head?\n\nHow old were you when these repeated injuries began? Ended?\n\n</string>
    <string name="final_help">A person may be more likely to have ongoing problems if they have any of the following:</string>
    <string name="final_help_part_2">WORST\nOne moderate or severe TBI\n\nFIRST\nTBI with loss of consciousness before age 15\n\nMULTIPLE\n2 or more TBIs close together, including a period of time when they experienced multiple blows to the head\n\nRECENT\nA mild TBI in the last weeks or a more severe TBI in the last months\n\nOTHER SOURCES\nAny TBI combined with another way that their brain function has been impaired.\n\n</string>
    <string name="quit_description">Quit the help pop up window</string>
    <string name="help">        Help</string>
    <string name="emailId">emailEnterHipaa</string>
    <string name="send_title_text">Send</string>
    <string name="save_title_text">Save</string>
    <string name="save_help_text">If you are HIPAA compliant, you will only be able to save the survey results on the local device. The resulting CSV file is located on your device under the TBI-ID/ directory.\n\nIf you are not HIPAA compliant, you will be able to email the file. The file will still be saved on the local device in the TBI-ID/ directory.\n\nYou can access the exported file via any file manager application or by connecting the device to a computer.\n\nYour HIPAA compliance and email address can be set in the Settings page.\n\n</string>
    <string name="osutbi_training_txt">www.ohiovalley.org/tbi-id-method</string>
    <string name="osutbi_more_info">More information on the OSU TBI-ID\'s development, validation and use, as well as a pdf version of the recording form, is available at:</string>
    <string name="title_activity_finish">FinishActivity</string>
    <string name="finish_statement">Your email has been sent.\nThank you for completing the instrument.\n\nPress the Home button below to return to the main screen.\n\nPress the About button to read more about the project sponsors.</string>
    <string name="title_activity_save">SaveActivity</string>

</resources>