<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/helpbackground"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/help_header_background"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/help"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/Quit_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="4dp"
            android:background="#971425"
            android:contentDescription="@string/quit_description"
            android:src="@drawable/button_x" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginRight="1dp"
        android:scrollbarDefaultDelayBeforeFade="500" >

        <LinearLayout
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/step_1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:text="@string/step_1"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/help_step_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/step_1_help" />

            <TextView
                android:id="@+id/step_2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:text="@string/step_2"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/help_step_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/step_2_help" />

            <TextView
                android:id="@+id/step_3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/step_3"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/help_step_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:text="@string/step_3_help" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>