<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/helpbackground">
     
     <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/help_header_background"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="      Help"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/Quit_help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#971425"
            android:contentDescription="Quit popup help window"
            android:src="@drawable/button_x" />
        
    </LinearLayout>
    
	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginRight="1dp"
	    android:fadeScrollbars="false"	    
	    android:layout_below="@+id/header"
	    android:layout_above="@+id/footer">
        	    
		<LinearLayout
		    android:id="@+id/scroll_view"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:paddingBottom="5dp"
		    android:orientation="vertical" >

		    <TextView
		        android:id="@+id/step_1_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="18dp"
		        android:text="@string/step_1"
		        android:textSize="32sp" />

		    <TextView
		        android:id="@+id/help_step_1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_marginTop="10dp"
		        android:ems="10"
		        android:text="@string/step_1_help" />

		    <TextView
		        android:id="@+id/step_1_question1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_marginTop="10dp"
		        android:ems="10"
		        android:text="@string/step_1_question1" />

		    <TextView
		        android:id="@+id/step_1_question2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_marginTop="10dp"
		        android:ems="10"
		        android:text="@string/step_1_question2" />

		    <TextView
		        android:id="@+id/step_1_question3"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_marginTop="10dp"
		        android:ems="10"
		        android:text="@string/step_1_question3" />

		    <TextView
		        android:id="@+id/step_1_question4"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_marginTop="10dp"
		        android:ems="10"
		        android:text="@string/step_1_question4" />

		    <TextView
		        android:id="@+id/step_1_question5"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="25dp"
		        android:layout_marginRight="25dp"
		        android:layout_marginTop="10dp"
		        android:ems="10"
		        android:text="@string/step_1_question5" />
		</LinearLayout>

    </ScrollView>
    
</RelativeLayout>
