<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".Step2Yes" >

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#971425"
        android:weightSum="2" >

        <ImageButton
            android:id="@+id/home_button_main_screen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/home" />

        <ImageButton
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#971425"
        android:orientation="horizontal"
        android:weightSum="4" >

        <ImageButton
            android:id="@+id/help_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/osu_tbi_id"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#971425"
            android:src="@drawable/settings" />
    </LinearLayout>

    <TextView
        android:id="@+id/step_2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/step_2"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/step_2_cause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
		android:layout_marginLeft="10dp"        
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/step_2_title"
        android:ems="10"
        android:text="" />

    <TextView
        android:id="@+id/howLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/step_2_cause"
        android:layout_marginTop="19dp"
        android:text="@string/howLong" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/howLong"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" >

        <RadioButton
            android:id="@+id/less30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/less30" />

        <RadioButton
            android:id="@+id/to24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to24" />
        
        <RadioButton
        	android:id="@+id/more24"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_below="@+id/to24"
        	android:text="@string/more24" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/done"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/done50" />

</RelativeLayout>