<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"    
    android:layout_height="match_parent"
    android:background="@drawable/helpbackground">
    
     <LinearLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/help_header_background"
         android:orientation="horizontal"
         android:weightSum="3" >

         <TextView
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:gravity="center"
             android:text="      Help"
             android:textColor="#ffffff"
             android:textSize="20sp"
             android:textStyle="bold" />

         <ImageButton
             android:id="@+id/Quit_help_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="#971425"
             android:contentDescription="Quit popup help window"
             android:src="@drawable/button_x" />
     </LinearLayout>
     
	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:fadeScrollbars="false"	    
	    android:layout_above="@+id/footer"	    
	    android:layout_below="@+id/header" >

		<LinearLayout
		    android:id="@+id/scroll_view"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >

		    <TextView
		        android:id="@+id/final_review_help_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="18dp"
		        android:text="@string/final_review_title"
		        android:textSize="32sp" />
		    
            <TextView
                android:id="@+id/help_step_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/final_help" />
            
			<TextView
                android:id="@+id/help_step_part_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:text="@string/final_help_part_2" /> 	

        </LinearLayout>
    </ScrollView>     
    
</RelativeLayout>
